# eGon-truck

./: .gitignore  .pre-commit-config.yaml  README.md  main.py  pyproject.toml  requirements.txt
config/: settings.toml
data/: 2500_NUTS3.dbf  2500_NUTS3.shp  2500_NUTS3.shx  250_NUTS1.dbf  250_NUTS1.shp  250_NUTS1.shx  BAST2019.csv  Jawe2020.csv  eGon-data.grid.hvmv_substation.gpkg
egon_truck/: data_io.py  demand.py  geo.py  io.py
egon_truck/config/: config.py  settings.toml
src/: demand.py  geo.py  io.py
